<resources>
    <string name="app_name">The Endangered</string>
    <string name="animal_name">Animal Name</string>
    <string name="status">Status</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="population">Population</string>
    <string name="habitat">Habitat</string>
    <string name="detail">Detail</string>
    <string name="weight">Weight</string>
    <string name="action_about">About</string>
    <string name="author_name">Rio Raymundus Theodora</string>
    <string name="author_email">rio.theodora@gmail.com</string>
</resources>
