<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/animal_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/received_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/received_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/population"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/received_population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scientific_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/received_scientific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/received_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/received_habitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/received_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>